--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production node server/index",
     "dev": "NODE_ENV=development nodemon server/index",
-    "build":"npm install && npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "Saiful Islam",
@@ -20,6 +20,7 @@
     "@graphql-tools/merge": "^9.0.6",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^5.0.0",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
